---------------------------------------------------------------------------------------------------
Version: 5.2.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.2.7
Date: 2020-10-30
  Changes:
    - Made displayed columns and rows adjustable again. Columns are restricted from 5 to 40 in increments of 5
---------------------------------------------------------------------------------------------------
Version: 5.2.6
Date: 2020-10-27
  Bugfixes:
    - Fixed error after players temporary trash slots have been emptied
---------------------------------------------------------------------------------------------------
Version: 5.2.5
Date: 2020-10-27
  Bugfixes:
    - Fixed Unknown sprite error when ModuleInserter mod is missing
---------------------------------------------------------------------------------------------------
Version: 5.2.4
Date: 2020-10-27
  Changes:
    - Updated the gui to look more like the vanilla gui
    - Removed mod settings to adjust the number of displayed rows/columns
    - Added flib as a dependency
---------------------------------------------------------------------------------------------------
Version: 5.2.2
Date: 2020-09-20
  Changes:
    - Changed AutoTrash to be enabled as soon as the vanilla logistics tab is available
---------------------------------------------------------------------------------------------------
Version: 5.2.1
Date: 2020-09-20
  Features:
    - Added buttons to export/import all presets at once
  Bugfixes:
    - Fixed importing would mess up the item order in the gui
---------------------------------------------------------------------------------------------------
Version: 5.2.0
Date: 28. 07. 2020
  Changes:
    - Changed the GUI to be draggable
    - Changed default number of columns to 10, to match the characters logistics GUI
    - Added setting to set the trash amount to the requested amount for new items